[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "prompt2model"
authors = [
    {name = "Vijay Viswanathan", email = "vijayv@andrew.cmu.edu"},
]
description = "A library for distilling models from prompts."
readme = "README.md"
repository = "https://github.com/neulab/prompt2model"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "transformers==4.24.0",
    "datasets==2.11.0",
    "pandas==1.5.3",
    "fastapi==0.100.0",
    "gradio==3.38.0",
    "torch==2.0.0",
    "pytest==7.3.1",
    "openai==0.27.2",
    "sentencepiece==0.1.99",
    "bert_score==0.3.13",
    "sacrebleu==2.3.1",
    "evaluate==0.4.0",
    "tevatron==0.1.0",
    "faiss-cpu==1.7.4",
    "mdtex2html==1.2.0",
    "scikit-learn==1.2.2",
    "retriv==0.2.1",
    "tiktoken==0.4.0",
    "aiolimiter==1.1.0",
]

dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest>=6.0.0",
]

[tool.hatch.build]
include = [
    "*.py",
]
exclude = [
    "*_test.py",
    "test_*.py",
]
only-packages = true

[tool.hatch.build.targets.wheel]
packages = ["prompt2model"]

[tool.hatch.version]
path = "prompt2model/version.py"

[tool.pytest.ini_options]
pythonpath = ["prompt2model/test_helpers"]
testpaths = ["prompt2model/tests"]