[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "prompt2model"
authors = [
    {name = "Vijay Viswanathan", email = "vijayv@andrew.cmu.edu"},
    {name = "Chenyang Zhao", email = "zhaochen20@mails.tsinghua.edu.cn"},
]
description = "A library for distilling models from prompts."
readme = "README.md"
repository = "https://github.com/neulab/prompt2model"
requires-python = ">=3.9"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "transformers",
    "datasets",
    "pandas",
    "fastapi",
    "gradio",
    "torch",
    "pytest",
    "openai",
    "sentencepiece",
    "bert_score",
    "sacrebleu",
    "evaluate",
    "tevatron",
    "faiss-cpu",
    "mdtex2html",
    "scikit-learn",
    "retriv",
    "tiktoken",
    "aiolimiter",
    "pyfiglet",
    "termcolor",
    "psutil",
    "protobuf==3.20.0",
    "nest-asyncio",
    "litellm"
]

dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest>=6.0.0",
]
dev = [
    "pytest",
    "pre-commit"
]

[tool.hatch.build]
include = [
    "*.py",
]
exclude = [
    "*_test.py",
    "test_*.py",
]
only-packages = true

[tool.hatch.build.targets.wheel]
packages = ["prompt2model"]

[tool.hatch.version]
path = "prompt2model/version.py"

[tool.pytest.ini_options]
pythonpath = ["prompt2model/test_helpers"]
testpaths = ["prompt2model/tests"]
